--- a/index.html
+++ b/index.html
@@ -432,6 +432,29 @@
             </li>
           </ul>
         </div>
+        <div class="footer-box3">
+          <form action="footer-form">
+            <label for="footer-email" class="footer-text-label"
+              >Subscribe</label
+            >
+            <div class="footer-input-wrap">
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                class="footer-input"
+                placeholder="E-mail"
+              />
+
+              <button type="submit" class="footer-form-btn">
+                Subscribe
+                <svg class="footer-icon-btn" width="24" height="24">
+                  <use href="./images/icons.svg#icon-airplane"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -441,6 +464,81 @@
             <use href="./images/icons.svg#close-back"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="modal-field">
+            <label for="user-name" class="input-label">Name</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="modal-input"
+                required
+              />
+              <svg class="modal-input-icon" width="18" hight="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-tel" class="input-label">Phone</label>
+            <div class="input-wrap">
+              <input
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+                class="modal-input"
+                required
+              />
+              <svg class="modal-input-icon" width="18" hight="24">
+                <use href="./images/icons.svg#icon-tel"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="input-label">Email</label>
+            <div class="input-wrap">
+              <input
+                type="email"
+                name="user-email"
+                id="user-email"
+                class="modal-input"
+                required
+              />
+              <svg class="modal-input-icon" width="18" hight="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-text" class="input-label">Comment</label>
+            <textarea
+              name="user-text"
+              id="user-text"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              name="user-terms"
+              id="user-terms"
+              class="modal-check visually-hidden"
+            />
+            <label for="user-terms" class="check-text"
+              ><span>
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the&nbsp
+              <a href="" class="privacy-link">Privacy Policy</a></label
+            >
+          </div>
+          <button type="submit" class="modal-input-btn">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
