--- a/portfolio.html
+++ b/portfolio.html
@@ -333,6 +333,29 @@
             </li>
           </ul>
         </div>
+        <div class="footer-box3">
+          <form action="footer-form">
+            <label for="footer-email" class="footer-text-label"
+              >Subscribe</label
+            >
+            <div class="footer-input-wrap">
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                class="footer-input"
+                placeholder="E-mail"
+              />
+
+              <button type="submit" class="footer-form-btn">
+                Subscribe
+                <svg class="footer-icon-btn" width="24" height="24">
+                  <use href="./images/icons.svg#icon-airplane"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
