--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 class="modal-input"
                 required
               />
-              <svg class="modal-input-icon" width="18" hight="24">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
             </div>
@@ -491,7 +491,7 @@
                 class="modal-input"
                 required
               />
-              <svg class="modal-input-icon" width="18" hight="24">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-tel"></use>
               </svg>
             </div>
@@ -506,7 +506,7 @@
                 class="modal-input"
                 required
               />
-              <svg class="modal-input-icon" width="18" hight="24">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -533,7 +533,7 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the&nbsp
+              I accept the terms and conditions of the
               <a href="" class="privacy-link">Privacy Policy</a></label
             >
           </div>
