--- a/portfolio.html
+++ b/portfolio.html
@@ -334,11 +334,9 @@
           </ul>
         </div>
         <div class="footer-box3">
-          <form action="footer-form">
-            <label for="footer-email" class="footer-text-label"
-              >Subscribe</label
-            >
-            <div class="footer-input-wrap">
+          <p class="footer-text-media">Subscribe</p>
+          <form action="footer-form" class="portfolio-form">
+            <label aria-label="footer-email">
               <input
                 type="email"
                 name="footer-email"
@@ -346,14 +344,13 @@
                 class="footer-input"
                 placeholder="E-mail"
               />
-
-              <button type="submit" class="footer-form-btn">
-                Subscribe
-                <svg class="footer-icon-btn" width="24" height="24">
-                  <use href="./images/icons.svg#icon-airplane"></use>
-                </svg>
-              </button>
-            </div>
+            </label>
+            <button type="submit" class="footer-form-btn">
+              Subscribe
+              <svg class="footer-icon-btn" width="24" height="24">
+                <use href="./images/icons.svg#icon-airplane"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
