--- a/index.html
+++ b/index.html
@@ -523,16 +523,17 @@
               name="user-privacy"
               id="user-privacy"
               class="modal-check visually-hidden"
+              value="true"
             />
-            <label for="user-privacy" class="check-text"
-              ><span class="check-text">
+            <label for="user-privacy" class="check-label custom-checkbox">
+              <span class="check-text">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="" class="privacy-link">Privacy Policy</a></label
-            >
+              <a href="" class="privacy-link">Privacy Policy</a>
+            </label>
           </div>
           <button type="submit" class="modal-input-btn">Send</button>
         </form>
