--- a/portfolio.html
+++ b/portfolio.html
@@ -333,10 +333,10 @@
             </li>
           </ul>
         </div>
-        <div class="footer-box3">
+        <div class="footer-box-three">
           <p class="footer-text-media">Subscribe</p>
           <form action="footer-form" class="portfolio-form">
-            <label aria-label="footer-email">
+            <label aria-label="footer-email" class="footer-label">
               <input
                 type="email"
                 name="footer-email"
