--- a/index.html
+++ b/index.html
@@ -432,10 +432,10 @@
             </li>
           </ul>
         </div>
-        <div class="footer-box3">
+        <div class="footer-box-three">
           <p class="footer-text-media">Subscribe</p>
           <form action="footer-form" class="portfolio-form">
-            <label aria-label="footer-email">
+            <label aria-label="footer-email" class="footer-label">
               <input
                 type="email"
                 name="footer-email"
@@ -525,15 +525,15 @@
               class="modal-check visually-hidden"
               value="true"
             />
-            <label for="user-privacy" class="check-label custom-checkbox">
-              <span class="check-text">
+            <label for="user-privacy" class="check-text"
+              ><span class="check-text">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="" class="privacy-link">Privacy Policy</a>
-            </label>
+              <a href="" class="privacy-link">Privacy Policy</a></label
+            >
           </div>
           <button type="submit" class="modal-input-btn">Send</button>
         </form>
