--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
               value="true"
             />
             <label for="user-privacy" class="check-text"
-              ><span class="check-text">
+              ><span class="check-text-span">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
